Change Mongo Implementation to MySQL
